--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +6,16 @@
     {% block heading %}
     
     {% endblock %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    
     <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+
         .navbar {
             background-color: #121212 !important;
             padding: 15px 20px;
@@ -16,10 +23,12 @@
 
         .navbar-brand {
             font-size: 1.5rem;
+            color: #1DB954 !important;
         }
 
         .navbar-nav .nav-link {
             font-size: 1.2rem;
+            color: #e0e0e0 !important;
             transition: color 0.3s ease-in-out;
         }
 
@@ -36,46 +45,208 @@
             filter: invert(1);
         }
 
-        body {
-            background-color: #121212;
-            color: #FFFFFF;
-            font-family: 'Montserrat', sans-serif;
-            margin: 0;
-            padding: 0;
+        .chat-container {
+            max-width: 600px;
+            margin: 50px auto;
+            background: #1e1e1e;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
         }
+
+        #chat-box {
+            border: 1px solid #333;
+            height: 300px;
+            overflow-y: auto;
+            background: #222;
+            padding: 10px;
+            border-radius: 8px;
+        }
+
+        .chat-message {
+            padding: 8px;
+            margin-bottom: 5px;
+            border-radius: 5px;
+            background: #333;
+            color: #ddd;
+        }
+
+        .chat-message strong {
+            color: #00bcd4;
+        }
+
+        .chat-message.you {
+            background: #616161;
+            color: white;
+            text-align: right;
+        }
+
+        .input-group {
+            margin-top: 15px;
+        }
+
+        .form-control {
+            background: #222;
+            color: #e0e0e0;
+            border: 1px solid #444;
+        }
+
+        .form-control:focus {
+            background: #1e1e1e;
+            color: #fff;
+            border-color: #00bcd4;
+            box-shadow: none;
+        }
+
+        .btn-send {
+            background-color: #00bcd4;
+            color: white;
+        }
+
+        .btn-send:hover {
+            background-color: #008ba3;
+        }
+
+        .form-container {
+            max-width: 400px;
+            margin: 50px auto;
+             padding: 20px;
+            background: #1e1e1e;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+    .form-container h2 {
+        text-align: center;
+        color: #1DB954;
+        margin-bottom: 20px;
+    }
+
+    .form-container input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 15px;
+        border: 1px solid #444;
+        border-radius: 5px;
+        background: #222;
+        color: white;
+    }
+
+    .form-container input::placeholder {
+        color: #999;
+    }
+
+    .form-container input:focus {
+        border-color: #1DB954;
+        outline: none;
+    }
+
+    .form-container button {
+        width: 100%;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background: #1DB954;
+        color: white;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    .form-container button:hover {
+        background: #17a747;
+    }
+
+    .center-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+    }
+
+    .authentication-form {
+        width: 100%;
+        max-width: 400px;
+        padding: 20px;
+        background: #1e1e1e;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+        text-align: center;
+    }
+
+    .authentication-form h2 {
+        color: #1DB954;
+        margin-bottom: 20px;
+    }
+
+    .authentication-form input {
+        width: 100%;
+        padding: 12px;
+        margin-bottom: 15px;
+        border: 1px solid #444;
+        border-radius: 5px;
+        background: #222;
+        color: white;
+        font-size: 1rem;
+    }
+
+    .authentication-form input::placeholder {
+        color: #999;
+    }
+
+    .authentication-form input:focus {
+        border-color: #1DB954;
+        outline: none;
+    }
+
+    .authentication-form button {
+        width: 100%;
+        padding: 12px;
+        border: none;
+        border-radius: 5px;
+        background: #1DB954;
+        color: white;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    .authentication-form button:hover {
+        background: #17a747;
+    }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #121212;">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand text-white fw-bold" href="{% url 'index' %}">Django Chat App</a>
-            <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+            <a class="navbar-brand fw-bold" href="{% url 'index' %}">Django Chat App</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'index' %}">Home</a>
                     </li>
                     {% if user.is_superuser %}
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="{% url 'create_room' %}">Create Room</a>
+                        <a class="nav-link {% if request.path == '/create_room/' %}active{% endif %}" href="{% url 'create_room' %}">Create Room</a>
                     </li>
                     {% endif %}
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="{% url 'logout_user' %}">Logout</a>
+                        <a class="nav-link {% if request.path == '/logout_user/' %}active{% endif %}" href="{% url 'logout_user' %}">Logout</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="{% url 'find_room' %}">Find Room</a>
+                        <a class="nav-link {% if request.path == '/find_room/' %}active{% endif %}" href="{% url 'find_room' %}">Find Room</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="{% url 'login_user' %}">Login</a>
+                        <a class="nav-link {% if request.path == '/login_user/' %}active{% endif %}" href="{% url 'login_user' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="{% url 'register_user' %}">Register</a>
+                        <a class="nav-link {% if request.path == '/register_user/' %}active{% endif %}" href="{% url 'register_user' %}">Register</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -84,7 +255,6 @@
     </nav>
     
     {% block body %}
-
     {% endblock %}
 </body>
 </html>
