--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,8 +2,15 @@
 
 {% block heading %}
     <title>All Code Joker - Django Chat App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 {% endblock %}
 
 {% block body %}
-    <h1>This is index!!!!</h1>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="welcome-container">
+            <h1>Welcome to All Code Joker - Django Chat App</h1>
+            <p>A simple real-time chat application built with Django, Javascript and WebSockets.</p>
+            <a href="{% url 'find_room' %}" class="btn btn-primary mt-3">Chat In A Chat Room</a>
+        </div>
+    </div>
 {% endblock %}
